--- a/lib/acgp_web/templates/layout/nav.html.eex
+++ b/lib/acgp_web/templates/layout/nav.html.eex
@@ -17,7 +17,8 @@
             <a class="navbar-item" href="/aw">AnswerWrong</a>
             <a class="navbar-item" href="/wtn">What the name?</a>
             <a class="navbar-item" href="/picit">Picture It</a>
-            <a class="navbar-item" href="/<%= Enum.random(["askhole", "mml", "drawit", "aw", "wtn", "picit"])%>">Random</a>
+            <a class="navbar-item" href="/abundance">Abundance</a>
+            <a class="navbar-item" href="/<%= Enum.random(["askhole", "mml", "drawit", "aw", "wtn", "picit", "abundance"])%>">Random</a>
         </div>
     </div>
 </nav>
