a small a-frame and physics demo

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -14,6 +14,10 @@ body {
   font-size: xx-large;
 }
 
+.a-enter-vr-button {
+  display: none;
+}
+
 #canvas-container {
   width: 100%;
   text-align:center;
