--- a/lib/acgp_web/templates/page/aframe.html.eex
+++ b/lib/acgp_web/templates/page/aframe.html.eex
@@ -1,12 +1,37 @@
-  <script src="https://aframe.io/releases/1.1.0/aframe.min.js"></script>
+  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <script src="https://unpkg.com/aframe-physics-system@1.4.0/dist/aframe-physics-system.min.js"></script>
+<script>
+    AFRAME.registerComponent('log', {
+  schema: {type: 'string'},
 
+  init: function () {
+    var stringToLog = this.data;
+    console.log(stringToLog);
+  }
+});
+</script>
 <div class="container">
-    <a-scene>
-        <a-box position="-1 3 -3" rotation="0 45 0" color="#4CC3D9" dynamic-body></a-box>
-        <a-sphere position="0 8 -5" radius="1.25" color="#EF2D5E" dynamic-body></a-sphere>
-        <a-cylinder position="1 5 -3" radius="0.5" height="1.5" color="#FFC65D" dynamic-body></a-cylinder>
-        <a-box position="0 0 -5" rotation="-90 0 0" width="10" height="10" depth="1" color="#7BC8A4" static-body></a-box>
+    <a-scene inspector="url: http://localhost:3333/dist/aframe-inspector.js">
+        <a-assets>
+            <img id="boxTexture" src="<%= Routes.static_path(@conn, "/images/gamemouth.jpg") %>">
+            <img id="boxTexture2" src="<%= Routes.static_path(@conn, "/images/gamemouth2.jpg") %>">
+            <img id="boxTexture3" src="<%= Routes.static_path(@conn, "/images/gamemouth3.jpg") %>">
+        </a-assets>
 
+        <%= for box <- @boxes do %>
+        <a-box id="<%= box.id %>" src="#<%= box.img %>" position="<%= box.pos %>" rotation="0 0 45" scale="1 1 1"></a-box>
+        <% end %>
+
+        <a-sky id="sky" material="color: #693d9e" color="#222"></a-sky>
+        <a-light type="ambient" color="#445451"></a-light>
+        <a-light type="point" intensity="1" position="2 4 4"></a-light>
     </a-scene>
 </div>
+
+  <script>
+    var box;
+//       <a-box id="box1" src="#boxTexture" position="-4 2 -5" rotation="0 0 45" scale="1 1 1" animation="property: object3D.rotation.x; to: 360; dir: alternate; dur: 4000; loop: true"></a-box>
+  //      <a-box id="box2" geometry="primitive: cylinder" src="#boxTexture2" position="0 2 -5" rotation="0 45 45" scale="1 1 1" animation="property: object3D.rotation.y; to: 360; dir: alternate; dur: 4000; loop: true"></a-box>
+    //    <a-box id="box3" geometry="primitive: sphere" src="#boxTexture3" position="4 2 -5" rotation="0 -123.00000000000001 85.21179560079727" scale="1 1 1" animation="property: object3D.rotation.z; to: 360; dir: alternate; dur: 4000; loop: true; round: true"></a-box>
+
+  </script>
