--- a/lib/acgp_web/templates/page/aframe.html.eex
+++ b/lib/acgp_web/templates/page/aframe.html.eex
@@ -1,16 +1,6 @@
 <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 <script src="https://unpkg.com/aframe-physics-system@1.4.0/dist/aframe-physics-system.min.js"></script>
-<script>
-    AFRAME.registerComponent('log', {
-  schema: {type: 'string'},
 
-  init: function () {
-    var stringToLog = this.data;
-    console.log(stringToLog);
-  }
-});
-
-</script>
 <div class="container">
     <a-scene inspector="url: http://localhost:3333/dist/aframe-inspector.js">
         <a-assets>
@@ -18,21 +8,29 @@
             <img id="boxTexture2" src="<%= Routes.static_path(@conn, "/images/gamemouth2.jpg") %>">
             <img id="boxTexture3" src="<%= Routes.static_path(@conn, "/images/gamemouth3.jpg") %>">
             <img id="sky" material="color: #ffffff; shader: flat; flatShading: false; side: back; backgroundColor: #ffffff" src="<%= Routes.static_path(@conn, "/images/sky.jpg") %>">
+            <img id="groundTexture" src="https://cdn.aframe.io/a-painter/images/floor.jpg">
+            <img id="skyTexture" src="https://cdn.aframe.io/a-painter/images/sky.jpg">
         </a-assets>
 
 
-        <a-box id="box" quaternion="0.09582654412262637 0.07552873086117202 0.007293864234794858 0.9925016291173226" src="#boxTexture" position="-1 3 -3" rotation="10.901095010159043 8.864803006264099 1.6896525378407974" color="#4CC3D9" dynamic-body></a-box>
-        <a-sphere position="0 1.25 -8" radius="1.25" color="#EF2D5E">
-            <a-ring position="-1 1 0" color="#B96FD3"></a-ring>
-            <a-ring position="1 1 0" color="#B96FD3"></a-ring>
-        </a-sphere>
-        <a-cylinder id="cylinder" rotation="0 0 -58.49498017829113" position="-0.99298 0.39372 -7.69233" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-        <a-plane id="ground" scale="1.95173 2.58051 1" static-body="sphereRadius: NaN" position="0 0 -4"  src="#boxTexture2" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-        <a-dodecahedron color="#B96FD3" src="#boxTexture3" position="4 1 -4" rotation="" scale="" visible="" material="" geometry=""></a-dodecahedron>
-        <a-text value="Hello, A-Frame!"  color="#111" position="0 2.5 -2" align="center" rotation="" scale="" visible="" text=""></a-text>
-        <a-torus-knot color="#B96FD3" position="-4 1 -4" radius-tubular="0.05" p="7" rotation="" scale="" visible="" material="" geometry=""></a-torus-knot>
-        <a-sky id="sky" src="#sky" color="#ECECEC"></a-sky>
-        <a-light type="ambient" color="#445451"></a-light>
-        <a-light type="point" intensity="1" position="2 4 4"></a-light>
+        <a-entity id="lightSphere" geometry="primitive: sphere; radius: 0.2" material="shader: flat" light="type: point; color: #FFF" position="-4 3 -4"
+                  animation="property: position; to: 4 2.8 -4; dir: alternate; loop: true"></a-entity>
+
+        <a-entity geometry="primitive: box" material="color: red" position="0 0.5 -10"></a-entity>
+        <a-entity geometry="primitive: box" material="color: orange" position="-2 0.5 -8"></a-entity>
+        <a-entity geometry="primitive: box" material="color: yellow" position="2 0.5 -8"></a-entity>
+        <a-entity geometry="primitive: box" material="color: green" position="-4 0.5 -6"></a-entity>
+        <a-entity geometry="primitive: box" material="color: blue" position="4 0.5 -6"></a-entity>
+
+        <a-entity id="sky" geometry="primitive: sphere; thetaLength: 90; radius: 30" material="side: back; height: 2048; width: 2048; src: #skyTexture; shader: flat"></a-entity>
+
+        <a-entity light="type: ambient; color: #222"></a-entity>
+        <a-entity light="type: directional; color: #111" position="-1 1 0"></a-entity>
+
+        <a-entity id="ground" geometry="primitive: plane; height: 100; width: 100"
+                  material="src: #groundTexture" rotation="-90 0 0"></a-entity>
+
+        <a-entity id="text" text="value: Show us the light!; color: #BBB"
+                  position="2.5 2 -8" scale="8 8 8"></a-entity>
     </a-scene>
 </div>
