--- a/lib/acgp_web/live/make_me_laugh.html.leex
+++ b/lib/acgp_web/live/make_me_laugh.html.leex
@@ -16,7 +16,6 @@
                         <% end %>
 
                     <% else %>
-                        <p class="title">My Answers</p>
                         <%= if !GameUtils.has_answered(@my_name, @game_state) do %>
                             <%= for answer <- @game_state.answer_cards do %>
                                 <button class="button margin-bottom is-large" phx-click="answer" phx-value-user="<%= @my_name %>" phx-value-answer="<%= answer %>"><%= answer %></button>
@@ -25,6 +24,10 @@
                             <input class="input" type="text" id="guess" onkeyup="event.keyCode == 13 ? this.value = '' : null" phx-keydown="myguess" phx-value-user="<%= @my_name %>" placeholder="Freestyle">
                             <% else %>
                             <h1 class="title">Waiting for other players</h1>
+                            <h2 class="subtitle">Other answers: </h2>
+                            <%= for ans <- @game_state.answered do %>
+                            <h2 class="subtitle"><%= ans.guess %></h2>
+                            <% end %>
                         <% end %>
                     <% end %>
                 </article>
